--- a/models/_jaffle_shop__sources.yml
+++ b/models/_jaffle_shop__sources.yml
@@ -4,9 +4,20 @@ sources:
   - name: jaffle_shop
     database: dbt_training_db
     schema: dbo
+    freshness: 
+      error_after:
+        count: 1
+        period: day
+      warn_after:
+        count: 12
+        period: hour
+    loaded_at_field: _etl_loaded_at
+
     tables:
       - name: src_customers
         description: source for customer data from the jaffle_shop crm application
+        freshness: null
+        
         columns:
           - name: id
             description: Primary key of the src_customers table
@@ -20,6 +31,8 @@ sources:
       
       - name: src_orders
         description: source for order data from the jaffle_shop order management application
+        freshness: null
+        
         columns:
           - name: id
             description: Primary key of the orders table
@@ -42,6 +55,3 @@ sources:
             tests:
               - accepted_values:
                   values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
-      
-      - name: src_payments
-        description: source for payment data from the jaffle_shop application
