--- a/models/_stripe__sources.yml
+++ b/models/_stripe__sources.yml
@@ -2,6 +2,7 @@ version: 2
 
 sources:
   - name: stripe
+    description: "{{ doc('stripe_docs') }}"
     database: dbt_training_db
     schema: dbo
     freshness: 
