--- a/packages.yml
+++ b/packages.yml
@@ -7,3 +7,6 @@ packages:
   
   - package: tnightengale/dbt_meta_testing
     version: 0.3.6
+  
+  - package: calogica/dbt_expectations
+    version: 0.10.4
