--- a/models/marts/mesh/fct_mesh_orders.yml
+++ b/models/marts/mesh/fct_mesh_orders.yml
@@ -1,5 +1,6 @@
 models:
   - name: fct_mesh_orders
+    latest_version: 1
     config:
       contract:
         enforced: true
@@ -32,3 +33,18 @@ models:
         data_type: int
       - name: customer_name
         data_type: varchar(100)
+    versions:
+      - v: 1
+        config:
+          alias: fct_mesh_orders
+      - v: 2
+        columns:
+          - name: order_amount
+            data_type: numeric(17,6)
+          - name: location_opened_on
+            data_type: date
+          - name: ordered_on
+            data_type: date
+          - include: all
+            exclude: [order_total, ordered_at, location_opened_at]
+
